исправляет ошибки дз 4

--- a/index.html
+++ b/index.html
@@ -39,9 +39,11 @@
     </header>
 
     
-     <section class="section overlay">
-      <h1 class="title-hero">Эффективные решения<br/> для вашего бизнеса</h1>
-      <button type="button" class="button-hero">Заказать услугу</button>
+     <section class="list overlay">
+    <div class="list title-hero-wrapper">
+     <h1 class="list title-hero">Эффективные решения<br/> для вашего бизнеса</h1>
+    </div>
+     <button type="button" class="button-hero">Заказать услугу</button>
      </section>
 
 
@@ -102,7 +104,7 @@
       <div class="conainer">
       <h2 class="title-team">Наша команда</h2>
        <ul class="about-team list">
-        <li class="item">
+        <li class="item team-employee">
           <img src="./images/img.jpg" alt="Николай Кучеренко" />  
          <h3 class="team-name">Николай Кучеренко</h3>
          <p class="section-profession">Product Designer</p>
@@ -129,7 +131,7 @@
           </a></li>
          </ul>
         </li>
-        <li class="item">
+        <li class="item team-employee">
             <img src="./images/img1.jpg" alt="Ольга Иванова"/>
             <h3 class="team-name">Ольга Иванова</h3>
             <p class="section-profession">Frontend Developer</p>
@@ -156,7 +158,7 @@
               </a></li>
             </ul>
            </li>
-         <li class="item">
+         <li class="item team-employee">
             <img src="./images/img2.jpg" alt="Андрей Шевченко"/>
             <h3 class="team-name">Андрей Шевченко</h3>
             <p class="section-profession">Marketing</p>
@@ -183,7 +185,7 @@
               </a></li>
             </ul>
           </li>
-          <li class="item">
+          <li class="item team-employee">
             <img src="./images/img3.jpg" alt="Иван Николаев"/>
             <h3 class="team-name">Иван Николаев</h3>
             <p class="section-profession">UI Designer</p>
@@ -272,22 +274,22 @@
       <section>
         <h2 class="list title-footer">присоединяйтесь</h2>
         <ul class="list footer-icon">
-          <li class="footer-icon-link"><a href="#">
+          <li class="footer-icons-link"><a href="#" class="footer-icon-link">
           <svg class="footer-ikon-img" width="20px" height="20px">
           <use href="./images/sprite.svg#icon-instagram" ></use>
           </svg>  
           </a></li>
-          <li class="footer-icon-link"><a href="#">
+          <li class="footer-icons-link"><a href="#" class="footer-icon-link">
             <svg class="footer-ikon-img" width="20px" height="20px">
             <use href="./images/sprite.svg#icon-twitter" ></use>
             </svg>  
           </a></li>
-          <li class="footer-icon-link"><a href="#">
+          <li class="footer-icons-link"><a href="#" class="footer-icon-link">
             <svg class="footer-ikon-img" width="20px" height="20px">
               <use href="./images/sprite.svg#icon-facebook" ></use>
               </svg>  
           </a></li>
-          <li class="footer-icon-link"><a href="#" class="footer-link-img">
+          <li class="footer-icons-link"><a href="#" class="footer-icon-link">
             <svg class="footer-ikon-img" width="20px" height="20px">
             <use href="./images/sprite.svg#icon-linkedin" ></use>
             </svg>  
