добавляет подчеркивание текущей ссылки

--- a/index.html
+++ b/index.html
@@ -89,12 +89,26 @@
 
      <ul class="services list">
 
-      <li class="item"><img src="./images/img-business.jpg" alt="Ноутбук">
-        <a href="#" class="section-services">Десктопные приложения</a></li>
-      <li class="item"><img src="./images/box.jpg" alt="Мобильный телефон">
-        <a href="#" class="section-services">Мобильные приложения</a></li>
-      <li class="item"><img src="./images/img-insp.jpg" alt="Компьютер">
-        <a href="#" class="section-services">Дизайнерские решения</a></li>
+      <li class="item">
+        <div class="services-img">
+        <img src="./images/img-business.jpg" alt="Ноутбук">
+        <a href="#" class="section-services">Десктопные приложения</a>
+       </div>
+      </li>
+
+      <li class="item">
+        <div class="services-img">
+        <img src="./images/box.jpg" alt="Мобильный телефон">
+        <a href="#" class="section-services">Мобильные приложения</a>
+        </div>
+      </li>
+
+      <li class="item">
+        <div class="services-img">
+        <img src="./images/img-insp.jpg" alt="Компьютер">
+        <a href="#" class="section-services">Дизайнерские решения</a>
+      </div>
+      </li>
 
      </ul>
     </div>
