--- a/portfolio.html
+++ b/portfolio.html
@@ -55,86 +55,103 @@
       <section class="section gallery-content">
         <div class="conainer">
        <ul class="gallery list">
-           <li class="item">
-             <a href="#">
+           <li class="item card">
+             <a href="#" >
+             <div class="product-card">
               <img src="./images/img-kryack.jpg" alt="Техно кряк">
+              <p class="section-paragraph">Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов. </p>
+             </div>
               <h2 class="section-name">Технокряк</h2>
               <p class="section-customer">Веб-сайт</p>
-              
-              <p class="section-paragraph">Технокряк это современная площадка распространения коронавируса.
-                   Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов. </p>
              </a> 
            </li>
-           <li class="item">
+           <li class="item card">
              <a href="#">
+               <div class="product-card">
                <img src="./images/img-poster.jpg" alt="Постер New Orlean vs Golden Star">
+               <p class="section-paragraph">Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов. </p>
+               </div>
                <h2 class="section-name">Постер New Orlean vs Golden Star</h2>
                <p class="section-customer">Дизайн</p>
-               <p class="section-paragraph">Технокряк это современная площадка распространения коронавируса.
-                    Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов. </p>
-             </a>
+              </a>
            </li>
-           <li class="item">
-             <a href="#">
+           <li class="item card">
+             <a href="#" >
+               <div class="product-card">
                <img src="./images/img-restaurant.jpg" alt="Ресторан Seafood">
+               <p class="section-paragraph">Технокряк это современная площадка распространения коронавируса. 
+                Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов. </p>
+               </div>
                <h2 class="section-name">Ресторан Seafood</h2>
                <p class="section-customer">Приложение</p>
-               <p class="section-paragraph">Технокряк это современная площадка распространения коронавируса. 
-                    Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов. </p>
              </a>
            </li>
-           <li class="item">
-             <a href="#">
+           <li class="item card">
+             <a href="#" >
+               <div class="product-card">
                <img src="./images/img-prime.jpg" alt="Наушники">
+               <p class="section-paragraph">Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов. </p>
+               </div>
                <h2 class="section-name">Проект Prime</h2>
                <p class="section-customer">Маркетинг</p>
-               <p class="section-paragraph">Технокряк это современная площадка распространения коронавируса.
-                   Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов. </p>
-              </a>
+             </a>
             </li>
-            <li class="item" >
-              <a href="#">
+            <li class="item card" >
+              <a href="#" >
+               <div class="product-card">
                 <img src="./images/img-boxes.jpg" alt="Проект Boxes">
+                <p class="section-paragraph">Технокряк это современная площадка распространения коронавируса. 
+                  Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов. </p>
+               </div>
                 <h2 class="section-name">Проект Boxes</h2>
                 <p class="section-customer">Приложение</p>
-                <p class="section-paragraph">Технокряк это современная площадка распространения коронавируса. 
-                    Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов. </p>
               </a>
             </li>
-            <li class="item">
-              <a href="#"> 
+            <li class="item card">
+              <a href="#" > 
+                <div class="product-card">
                 <img src="./images/img-insp.jpg" alt="Монитор">
+                <p class="section-paragraph">Технокряк это современная площадка распространения коронавируса.
+                  Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов. </p>
+              </div>
                 <h2 class="section-name">Inspiration has no Borders </h2>
                 <p class="section-customer">Веб-сайт </p>
-                <p class="section-paragraph">Технокряк это современная площадка распространения коронавируса.
-                   Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов. </p>
               </a>
            </li>
-           <li class="item">
-              <a href="#">
+           <li class="item card">
+              <a href="#" >
+                <div  class="product-card">
                 <img src="./images/img-limited.jpg" alt="Издание Limited Edition">
+                <p class="section-paragraph">Технокряк это современная площадка распространения коронавируса.
+                  Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов. </p>
+                </div>
                 <h2 class="section-name">Издание Limited Edition</h2>
                 <p class="section-customer">Дизайн</p>
-                <p class="section-paragraph">Технокряк это современная площадка распространения коронавируса.
-                   Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов. </p>
               </a>
            </li>
-           <li class="item">
+           <li class="item card">
               <a href="#">
+                <div class="product-card">
                 <img src="./images/img-lab.jpg" alt="Проект LAB">
+                <p class="section-paragraph">Технокряк это современная площадка распространения коронавируса.
+                  Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов. </p>
+                </div>
                 <h2 class="section-name">Проект LAB</h2>
                 <p class="section-customer">Маркетинг</p>
-                <p class="section-paragraph">Технокряк это современная площадка распространения коронавируса.
-                 Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов. </p>
               </a>
             </li>
-           <li class="item">
+           <li class="item card">
               <a href="#">
+                <div  class="product-card">
                 <img src="./images/img-business.jpg" alt="Ноутбук">
+                <p class="section-paragraph">Технокряк это современная площадка распространения коронавируса.
+                  Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов. </p>
+                </div>
                 <h2 class="section-name">Growing Business</h2>
                 <p class="section-customer">Приложение</p>
-                <p class="section-paragraph">Технокряк это современная площадка распространения коронавируса.
-                 Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов. </p>
               </a>
             </li>
            
