исправляет ошибки в футере

--- a/index.html
+++ b/index.html
@@ -91,21 +91,21 @@
 
       <li class="item">
         <div class="services-img">
-        <img src="./images/img-business.jpg" alt="Ноутбук">
+        <img src="./images/img-business.jpg" alt="Ноутбук" class="services-image">
         <a href="#" class="section-services">Десктопные приложения</a>
        </div>
       </li>
 
       <li class="item">
         <div class="services-img">
-        <img src="./images/box.jpg" alt="Мобильный телефон">
+        <img src="./images/box.jpg" alt="Мобильный телефон" class="services-image">
         <a href="#" class="section-services">Мобильные приложения</a>
         </div>
       </li>
 
       <li class="item">
         <div class="services-img">
-        <img src="./images/img-insp.jpg" alt="Компьютер">
+        <img src="./images/img-insp.jpg" alt="Компьютер" class="services-image">
         <a href="#" class="section-services">Дизайнерские решения</a>
       </div>
       </li>
