--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
            <li class="item card">
              <a href="#" >
              <div class="product-card">
-              <img src="./images/img-kryack.jpg" alt="Техно кряк">
+              <img src="./images/img-kryack.jpg" alt="Техно кряк" class="product-card-img">
               <p class="section-paragraph">Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов. </p>
              </div>
@@ -179,22 +179,22 @@
        <section>
         <h2 class="list title-footer">присоединяйтесь</h2>
         <ul class="list footer-icon">
-          <li class="footer-icon-link"><a href="#">
+          <li class="footer-icons-link"><a href="#" class="footer-icon-link">
           <svg class="footer-ikon-img" width="20px" height="20px">
           <use href="./images/sprite.svg#icon-instagram" ></use>
           </svg>  
           </a></li>
-          <li class="footer-icon-link"><a href="#">
+          <li class="footer-icons-link"><a href="#" class="footer-icon-link">
             <svg class="footer-ikon-img" width="20px" height="20px">
             <use href="./images/sprite.svg#icon-twitter" ></use>
             </svg>  
           </a></li>
-          <li class="footer-icon-link"><a href="#">
+          <li class="footer-icons-link"><a href="#" class="footer-icon-link">
             <svg class="footer-ikon-img" width="20px" height="20px">
               <use href="./images/sprite.svg#icon-facebook" ></use>
               </svg>  
           </a></li>
-          <li class="footer-icon-link"><a href="#" class="footer-link-img">
+          <li class="footer-icons-link"><a href="#" class="footer-icon-link">
             <svg class="footer-ikon-img" width="20px" height="20px">
             <use href="./images/sprite.svg#icon-linkedin" ></use>
             </svg>  
