исправление ошибок валидации

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <ul class="qualities list"> 
        <li class="advantage"> 
          <div class="advantage-img-background">
-         <svg  class="advantage-img" widht="70px" height="70px" ><use href="./images/sprite.svg#icon-antenna"></use></svg>
+         <svg  class="advantage-img" width="70px" height="70px" ><use href="./images/sprite.svg#icon-antenna"></use></svg>
          </div>
          <h2 class="qualities-name">Внимание к деталям</h2>
          <p class ="paragraph">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
