--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
         <div class="conainer">
        <ul class="gallery list">
            <li class="item card">
-             <a href="#" >
+             <a href="#" class="product-card-link">
              <div class="product-card">
               <img src="./images/img-kryack.jpg" alt="Техно кряк" class="product-card-img">
               <p class="section-paragraph">Технокряк это современная площадка распространения коронавируса.
@@ -67,7 +67,7 @@
              </a> 
            </li>
            <li class="item card">
-             <a href="#">
+             <a href="#" class="product-card-link">
                <div class="product-card">
                <img src="./images/img-poster.jpg" alt="Постер New Orlean vs Golden Star">
                <p class="section-paragraph">Технокряк это современная площадка распространения коронавируса.
@@ -78,7 +78,7 @@
               </a>
            </li>
            <li class="item card">
-             <a href="#" >
+             <a href="#" class="product-card-link">
                <div class="product-card">
                <img src="./images/img-restaurant.jpg" alt="Ресторан Seafood">
                <p class="section-paragraph">Технокряк это современная площадка распространения коронавируса. 
@@ -89,7 +89,7 @@
              </a>
            </li>
            <li class="item card">
-             <a href="#" >
+             <a href="#" class="product-card-link">
                <div class="product-card">
                <img src="./images/img-prime.jpg" alt="Наушники">
                <p class="section-paragraph">Технокряк это современная площадка распространения коронавируса.
@@ -100,7 +100,7 @@
              </a>
             </li>
             <li class="item card" >
-              <a href="#" >
+              <a href="#" class="product-card-link">
                <div class="product-card">
                 <img src="./images/img-boxes.jpg" alt="Проект Boxes">
                 <p class="section-paragraph">Технокряк это современная площадка распространения коронавируса. 
@@ -111,7 +111,7 @@
               </a>
             </li>
             <li class="item card">
-              <a href="#" > 
+              <a href="#" class="product-card-link"> 
                 <div class="product-card">
                 <img src="./images/img-insp.jpg" alt="Монитор">
                 <p class="section-paragraph">Технокряк это современная площадка распространения коронавируса.
@@ -122,7 +122,7 @@
               </a>
            </li>
            <li class="item card">
-              <a href="#" >
+              <a href="#" class="product-card-link">
                 <div  class="product-card">
                 <img src="./images/img-limited.jpg" alt="Издание Limited Edition">
                 <p class="section-paragraph">Технокряк это современная площадка распространения коронавируса.
@@ -133,7 +133,7 @@
               </a>
            </li>
            <li class="item card">
-              <a href="#">
+              <a href="#" class="product-card-link">
                 <div class="product-card">
                 <img src="./images/img-lab.jpg" alt="Проект LAB">
                 <p class="section-paragraph">Технокряк это современная площадка распространения коронавируса.
@@ -144,7 +144,7 @@
               </a>
             </li>
            <li class="item card">
-              <a href="#">
+              <a href="#" class="product-card-link">
                 <div  class="product-card">
                 <img src="./images/img-business.jpg" alt="Ноутбук">
                 <p class="section-paragraph">Технокряк это современная площадка распространения коронавируса.
